add jquery.min.js and popup.js , manifest.json add permissions 'storage'

--- a/manifest.json
+++ b/manifest.json
@@ -10,5 +10,8 @@
         "default_icon" : "icon128.png",
         "default_popup" : "popup.html"
 
-    }
+    },
+    "permissions" : [
+        "storage"
+    ]
 }
