--- a/manifest.json
+++ b/manifest.json
@@ -11,6 +11,7 @@
         "default_popup" : "popup.html"
 
     },
+    "options_page" : "options.html",
     "permissions" : [
         "storage"
     ]
